jupyter notebooks added

--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "### Explore the data using SQL!\n",
     "AnnSQL wraps around the powerful DuckDb SQL engine, you're now capable of running simple or complex queries on the dataset.\n",
     "\n",
-    "#### SELECT Example"
+    "### SELECT Example"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Filter Example"
+    "### Filter Example"
    ]
   },
   {
@@ -605,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Filter by cell type (bulk_labels)"
+    "### Filter by cell type (bulk_labels)"
    ]
   },
   {
@@ -956,12 +956,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Count total cells by cell type (bulk_labels)"
+    "### Count total cells by cell type (bulk_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -992,53 +992,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>68</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>240</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CD4+/CD45RO+ Memory</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CD8+ Cytotoxic T</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CD8+/CD45RA+ Naive Cytotoxic</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>CD14+ Monocyte</td>\n",
        "      <td>129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>2</th>\n",
        "      <td>CD19+ B</td>\n",
        "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CD34+</td>\n",
-       "      <td>13</td>\n",
+       "      <th>3</th>\n",
+       "      <td>CD4+/CD25 T Reg</td>\n",
+       "      <td>68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>4</th>\n",
+       "      <td>CD8+ Cytotoxic T</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CD8+/CD45RA+ Naive Cytotoxic</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>CD56+ NK</td>\n",
        "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CD4+/CD45RO+ Memory</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CD34+</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>240</td>\n",
+       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1046,19 +1046,19 @@
       ],
       "text/plain": [
        "                    bulk_labels  total\n",
-       "0               CD4+/CD25 T Reg     68\n",
-       "1    CD4+/CD45RA+/CD25- Naive T      8\n",
-       "2           CD4+/CD45RO+ Memory     19\n",
-       "3              CD8+ Cytotoxic T     54\n",
-       "4  CD8+/CD45RA+ Naive Cytotoxic     43\n",
-       "5                CD14+ Monocyte    129\n",
-       "6                       CD19+ B     95\n",
-       "7                         CD34+     13\n",
-       "8                      CD56+ NK     31\n",
-       "9                     Dendritic    240"
+       "0                     Dendritic    240\n",
+       "1                CD14+ Monocyte    129\n",
+       "2                       CD19+ B     95\n",
+       "3               CD4+/CD25 T Reg     68\n",
+       "4              CD8+ Cytotoxic T     54\n",
+       "5  CD8+/CD45RA+ Naive Cytotoxic     43\n",
+       "6                      CD56+ NK     31\n",
+       "7           CD4+/CD45RO+ Memory     19\n",
+       "8                         CD34+     13\n",
+       "9    CD4+/CD45RA+/CD25- Naive T      8"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
