--- a/examples/build_ondisk_database.ipynb
+++ b/examples/build_ondisk_database.ipynb
@@ -99,6 +99,10 @@
     }
    ],
    "source": [
+    "#this delete command is for testing purposes only. Remove this line in production \n",
+    "if os.path.exists(\"db/pbmc3k.asql\"):\n",
+    "\tos.remove(\"db/pbmc3k.asql\")\n",
+    "\n",
     "MakeDb(adata=adata, db_name=\"pbmc3k\", db_path=\"db/\")"
    ]
   },
