Buillddb index updated and logn update to calculate_log method

--- a/examples/build_ondisk_database.ipynb
+++ b/examples/build_ondisk_database.ipynb
@@ -29,13 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from AnnSQL import AnnSQL\n",
     "from MakeDb import MakeDb\n",
-    "import scanpy as sc"
+    "import scanpy as sc\n",
+    "import os"
    ]
   },
   {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,25 +76,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to make var_names unique:  19.29051899909973\n",
-      "Time to create X table schema:  0.2035069465637207\n",
-      "Time to insert X data:  8.828634023666382\n"
+      "Time to make var_names unique:  20.11086130142212\n",
+      "Time to create X table schema:  0.19924283027648926\n",
+      "Time to insert X data:  9.001039266586304\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<MakeDb.MakeDb at 0x7b08c8dc4c80>"
+       "<MakeDb.MakeDb at 0x700fa0bc66c0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +338,7 @@
        "[5 rows x 32739 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
