slighty modify package structure. Getting ready for launch.

--- a/examples/advanced_usage.ipynb
+++ b/examples/advanced_usage.ipynb
@@ -41,15 +41,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to make var_names unique:  18.767115592956543\n",
-      "Time to create X table schema:  0.24080705642700195\n",
-      "Time to insert X data:  9.258856296539307\n"
+      "Time to make var_names unique:  20.18883967399597\n",
+      "Time to create X table structure:  0.21071982383728027\n",
+      "Time to insert X data:  9.145220279693604\n"
      ]
     }
    ],
    "source": [
     "from AnnSQL import AnnSQL\n",
-    "from MakeDb import MakeDb\n",
+    "from AnnSQL.MakeDb import MakeDb\n",
     "import scanpy as sc\n",
     "import os\n",
     "adata = sc.datasets.pbmc3k()\n",
