--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -85,9 +85,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to make var_names unique:  0.07334017753601074\n",
-      "Time to create X table schema:  0.006224632263183594\n",
-      "Time to insert X data:  0.09906196594238281\n"
+      "Time to make var_names unique:  0.05755782127380371\n",
+      "Time to create X table structure:  0.0072100162506103516\n",
+      "Time to insert X data:  0.12090826034545898\n"
      ]
     }
    ],
