--- a/examples/build_ondisk_database.ipynb
+++ b/examples/build_ondisk_database.ipynb
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from AnnSQL import AnnSQL\n",
-    "from MakeDb import MakeDb\n",
+    "from AnnSQL.MakeDb import MakeDb\n",
     "import scanpy as sc\n",
     "import os"
    ]
