--- a/examples/advanced_usage.ipynb
+++ b/examples/advanced_usage.ipynb
@@ -57,7 +57,7 @@
     "if os.path.exists(\"db/pbmc3k.asql\"):\n",
     "\tos.remove(\"db/pbmc3k.asql\")\n",
     "MakeDb(adata=adata, db_name=\"pbmc3k\", db_path=\"db/\")\n",
-    "adata_sql = AnnSQL(db=\"db/pbmc3k.asql\")"
+    "asql = AnnSQL(db=\"db/pbmc3k.asql\")"
    ]
   },
   {
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "adata_sql.calculate_total_counts(chunk_size=950) #if system memory is low, lower chunks to <=200 "
+    "asql.calculate_total_counts(chunk_size=950) #if system memory is low, lower chunks to <=200 "
    ]
   },
   {
@@ -161,7 +161,7 @@
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT total_counts FROM X ORDER BY total_counts DESC LIMIT 5 \")"
+    "asql.query(\"SELECT total_counts FROM X ORDER BY total_counts DESC LIMIT 5 \")"
    ]
   },
   {
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "adata_sql.calculate_gene_counts(chunk_size=950)"
+    "asql.calculate_gene_counts(chunk_size=950)"
    ]
   },
   {
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT * FROM var ORDER BY gene_counts DESC LIMIT 5 \")"
+    "asql.query(\"SELECT * FROM var ORDER BY gene_counts DESC LIMIT 5 \")"
    ]
   },
   {
@@ -311,7 +311,7 @@
    ],
    "source": [
     "#lower chunk_size if system memory is low. Max supported chunk_size is 950 (DuckDB limitation)\n",
-    "adata_sql.expression_normalize(chunk_size=950) "
+    "asql.expression_normalize(chunk_size=950) "
    ]
   },
   {
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT RER1 FROM X ORDER BY RER1 DESC LIMIT 5 \")"
+    "asql.query(\"SELECT RER1 FROM X ORDER BY RER1 DESC LIMIT 5 \")"
    ]
   },
   {
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "adata_sql.expression_log(log_type=\"LOG2\", chunk_size=950) #LOG2 or LOG10"
+    "asql.expression_log(log_type=\"LOG2\", chunk_size=950) #LOG2 or LOG10"
    ]
   },
   {
@@ -494,7 +494,7 @@
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT RER1 FROM X ORDER BY RER1 DESC LIMIT 5 \")"
+    "asql.query(\"SELECT RER1 FROM X ORDER BY RER1 DESC LIMIT 5 \")"
    ]
   },
   {
@@ -520,7 +520,7 @@
     }
    ],
    "source": [
-    "adata_sql.calculate_variable_genes(chunk_size=950) "
+    "asql.calculate_variable_genes(chunk_size=950) "
    ]
   },
   {
@@ -1028,7 +1028,7 @@
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT * FROM var ORDER BY variance DESC LIMIT 50 \")"
+    "asql.query(\"SELECT * FROM var ORDER BY variance DESC LIMIT 50 \")"
    ]
   }
  ],
