--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,21 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to make var_names unique:  0.05755782127380371\n",
-      "Time to create X table structure:  0.0072100162506103516\n",
-      "Time to insert X data:  0.12090826034545898\n"
+      "Time to make var_names unique:  0.034673452377319336\n",
+      "Time to create X table structure:  0.004136085510253906\n",
+      "Time to insert X data:  0.08172154426574707\n"
      ]
     }
    ],
    "source": [
-    "adata_sql = AnnSQL(adata=adata)"
+    "asql = AnnSQL(adata=adata)"
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -305,13 +305,13 @@
        "[5 rows x 766 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT * FROM X LIMIT 5\")"
+    "asql.query(\"SELECT * FROM X LIMIT 5\")"
    ]
   },
   {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -602,13 +602,13 @@
        "[8 rows x 766 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT * FROM X WHERE HES4 > 4\")"
+    "asql.query(\"SELECT * FROM X WHERE HES4 > 4\")"
    ]
   },
   {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -953,13 +953,13 @@
        "[10 rows x 775 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT * FROM adata WHERE bulk_labels = 'Dendritic' AND percent_mito > 0.025\")"
+    "asql.query(\"SELECT * FROM adata WHERE bulk_labels = 'Dendritic' AND percent_mito > 0.025\")"
    ]
   },
   {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1068,18 +1068,18 @@
        "9    CD4+/CD45RA+/CD25- Naive T      8"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT bulk_labels, COUNT(*) as total FROM obs GROUP BY bulk_labels ORDER BY total DESC\")"
+    "asql.query(\"SELECT bulk_labels, COUNT(*) as total FROM obs GROUP BY bulk_labels ORDER BY total DESC\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1170,13 +1170,13 @@
        "10             varm_PCs"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata_sql.query(\"SHOW tables;\")"
+    "asql.query(\"SHOW tables;\")"
    ]
   }
  ],
