--- a/examples/build_ondisk_database.ipynb
+++ b/examples/build_ondisk_database.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "adata = sc.read_h5ad(\"data/pbmc3k_raw.h5ad\", backed=\"r\")\n",
     "\n",
-    "#this delete command is for testing purposes only. \n",
+    "#Delete command. This is for testing purposes only. \n",
     "if os.path.exists(\"db/pbmc3k.asql\"):\n",
     "\tos.remove(\"db/pbmc3k.asql\")\n",
     "if os.path.exists(\"db/pbmc3k.asql.wal\"):\n",
@@ -121,7 +121,7 @@
     "# #medium system memory (12-24Gb)\n",
     "# MakeDb(adata=adata, db_name=\"pbmc3k\", db_path=\"db/\", chunk_size=2500)\n",
     "\n",
-    "# #low system memory (<12Gb)\n",
+    "# #low system memory (<=12Gb)\n",
     "# MakeDb(adata=adata, db_name=\"pbmc3k\", db_path=\"db/\", chunk_size=1000, make_buffer_file=True)"
    ]
   },
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_sql = AnnSQL(db=\"db/pbmc3k.asql\")"
+    "asql = AnnSQL(db=\"db/pbmc3k.asql\")"
    ]
   },
   {
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "adata_sql.query(\"SELECT * FROM X LIMIT 5\")"
+    "asql.query(\"SELECT * FROM X LIMIT 5\")"
    ]
   },
   {
@@ -474,7 +474,7 @@
    ],
    "source": [
     "#total counts per gene \n",
-    "adata_sql.query(\"SELECT SUM(COLUMNS(*)) FROM (SELECT * EXCLUDE (cell_id) FROM X)\")"
+    "asql.query(\"SELECT SUM(COLUMNS(*)) FROM (SELECT * EXCLUDE (cell_id) FROM X)\")"
    ]
   }
  ],
