--- a/examples/inteRoperability.Rmd
+++ b/examples/inteRoperability.Rmd
@@ -1,9 +1,14 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# R InteRoperability
+# InteRoperability
 
 Annsql uses the duckdb api to build the database and perform operations. You can access the .asql file in R by simply installing the duckdb package and loading the library and database. Once you've loaded the db you can run any query you'd like.
 
