--- a/docs/basic_usage.ipynb
+++ b/docs/basic_usage.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Basic Usage\n",
-    "Below, we give the the most streamlined example of how to use AnnSQL for a smaller datasets. This notebook shows how to use the in-memory querying capabilities of AnnSql. Depending on your system memory and the AnnData filesize, you may want to consider building local database using AnnSQL; however, if your dataset contains fewer than around 30k libraries, then this approach should work well."
+    "Below, we give the the most streamlined example of how to use AnnSQL for a smaller datasets. This notebook shows how to use the in-memory querying capabilities of AnnSql. Depending on your system memory and the AnnData filesize, you may want to consider building local database using AnnSQL; however, if your dataset contains fewer than around 30k cells, then this approach should work well."
    ]
   },
   {
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pass the adata object to the AnnSQL class.\n",
+    "### Pass the adata object to the AnnSQL class\n",
     "Below, we simply instantiate AnnSQL class with the adata object from above. Alternatively, you may pass a filepath to a h5ad file."
    ]
   },
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explore the data using SQL!\n",
+    "### Explore the data using SQL\n",
     "AnnSQL wraps around the powerful DuckDb SQL engine, you're now capable of running simple or complex queries on the dataset.\n",
     "\n",
     "### SELECT Example"
@@ -615,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter by cell type (bulk_labels)"
+    "### Filter by cell type"
    ]
   },
   {
@@ -966,7 +966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Count total cells by cell type (bulk_labels)"
+    "### Count total cells by cell type"
    ]
   },
   {
@@ -1075,6 +1075,13 @@
    ],
    "source": [
     "asql.query(\"SELECT bulk_labels, COUNT(*) as total FROM obs GROUP BY bulk_labels ORDER BY total DESC\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Show all tables in the database"
    ]
   },
   {
