--- a/docs/build_meta_cells.ipynb
+++ b/docs/build_meta_cells.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Building Meta Cell Groups\n",
-    "AnnSQL conveniently is packaged with functionality to build meta groupings of cells by specfic observational aggregations. In this example we build groupings of all mean gene (these are really mean genes :/) expression per group."
+    "For incredibily large datasets where it's helpful to create meta cell groupings, AnnSQL conveniently is packaged with functionality to build groupings of cells by specfic observational aggregations. In this example we build groupings of all mean gene expression per group (cell)."
    ]
   },
   {
@@ -103,7 +103,6 @@
    ],
    "source": [
     "asql = AnnSQL(db=\"db/splatter/data_10000.asql\")\n",
-    "asql.show_tables()\n",
     "asql.query(\"DESCRIBE obs\")"
    ]
   },
