--- a/docs/build_in_memory_database.ipynb
+++ b/docs/build_in_memory_database.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Build an In-memory Database\n",
-    "Using AnnSQL, there are two types of databases you can build. The first is a simple in-memory database for smaller datasets. The second is an on-disk database which we demonstrate how to build in this notebook. Building an in-memory AnnSQL allows you to quickly build a database and perform queries. The database is NOT persistent and will be cleared from memory, once the python process has finished executing."
+    "Using AnnSQL, there are two types of databases you can build. The first is a simple in-memory database for smaller datasets which we demonstrate how to build in this notebook. Building an in-memory AnnSQL allows you to quickly build a database and perform queries. The database is NOT persistent and will be cleared from memory, once the python process has finished executing."
    ]
   },
   {
