--- a/docs/build_ondisk_database.ipynb
+++ b/docs/build_ondisk_database.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Build an On-Disk Database\n",
-    "Using AnnSQL, there are two types of databases you can build. The first is a simple in-memory database for smaller datasets. The second is an on-disk database which we demonstrate how to build in this notebook. Building an on-disk AnnSQL database will allow you to query, filter, and run basic statistics on a laptop for larger than memory datasets.\n",
+    "Using AnnSQL, there are two types of databases you can build. The first is a simple in-memory database for smaller datasets. The second is an on-disk database which we demonstrate how to build in this notebook. Building an on-disk AnnSQL database will allow you to query, filter, and run basic statistics on a laptop for larger than memory datasets. Any modifications to an on-disk database will be automatically saved to the database.\n",
     "\n"
    ]
   },
